--- a/templates/guides.html
+++ b/templates/guides.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Game Guides</title>
+  <title>Игровые гайды</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
-    <h1>Game Guides</h1>
+    <h1>Игровые гайды</h1>
     <div class="accordion" id="guideAccordion">
       <div class="card">
         <div class="card-header" id="guideOneHeader">
           <h2 class="mb-0">
             <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#guideOne" aria-expanded="true" aria-controls="guideOne">
-              Guide 1: How to Play Game 1
+              Гайд номер один : Как играть в Бравл Старс
             </button>
           </h2>
         </div>
