5 этап проекта (изменения)

--- a/templates/guides.html
+++ b/templates/guides.html
@@ -18,8 +18,8 @@
         </div>
         <div id="guideOne" class="collapse show" aria-labelledby="guideOneHeader" data-parent="#guideAccordion">
           <div class="card-body">
-            <h3>Full Description of Guide 1</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed non risus. Suspendisse lectus tortor, dignissim sit amet, adipiscing nec, ultricies sed, dolor. Cras elementum ultrices diam. Maecenas ligula massa, varius a, semper congue, euismod non, mi. Proin porttitor, orci nec nonummy molestie, enim est eleifend mi, non fermentum diam nisl sit amet erat. Duis semper. Duis arcu massa, scelerisque vitae, consequat in, pretium a, enim. Pellentesque congue. Ut in risus volutpat libero pharetra tempor. Cras vestibulum bibendum augue. Praesent egestas leo in pede. Praesent blandit odio eu enim. Pellentesque sed dui ut augue blandit sodales. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam nibh. Mauris ac mauris sed pede pellentesque fermentum. Maecenas adipiscing ante non diam sodales hendrerit.</p>
+            <h3>Полное описание</h3>
+            <p>Пока что гайда нет,но скора он будет выложен.Так что ждите совсем скоро</p>
           </div>
         </div>
       </div>
