--- a/templates/home.html
+++ b/templates/home.html
@@ -28,9 +28,9 @@
     </nav>
 
     <div class="container mt-4">
-        <h1>Welcome to Your Website</h1>
-        <p>This is the homepage of your website.</p>
-        <a href="#" class="btn btn-primary">Learn More</a>
+        <h1>Добро пожаловать на мой тестовый сайт</h1>
+        <p>Здесь вы сможете смотреть гайды по разным играм и выкладывать свои собственные.Вскоре будет добавлена регистрация на сайт.Автор сайта : Артем Журавлев Александровичь</p>
+        <a href="#" class="btn btn-primary">Смотреть больше</a>
     </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
