--- a/templates/home.html
+++ b/templates/home.html
@@ -18,7 +18,7 @@
                     <a class="nav-link" href="#">Главная страница</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Гайды</a>
+                    <button id="myButton" class="btn">Гайды</button>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Контакты</a>
