--- a/templates/home.html
+++ b/templates/home.html
@@ -15,14 +15,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Главная страница</a>
+                    <button id="myButton" class="btn">Главная страница</button>
                 </li>
                 <li class="nav-item">
                     <button id="myButton" class="btn">Гайды</button>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Контакты</a>
+                    <button id="myButton" class="btn">Контакты</button>
                 </li>
+                <li class="nav-item">
+                    <button id="myButton" class="btn">Добавить гайд</button>
             </ul>
         </div>
     </nav>
