--- a/templates/home.html
+++ b/templates/home.html
@@ -16,15 +16,26 @@
             <ul class="navbar-nav">
                 <li class="nav-item active">
                     <button id="myButton" class="btn">Главная страница</button>
-                </li>
-                <li class="nav-item">
-                    <button id="myButton" class="btn">Гайды</button>
-                </li>
-                <li class="nav-item">
-                    <button id="myButton" class="btn">Контакты</button>
-                </li>
-                <li class="nav-item">
-                    <button id="myButton" class="btn">Добавить гайд</button>
+                    <script>
+                      document.getElementById("myButton").addEventListener("click", function() {
+                        window.location.href = "https://example.com"; // Замените URL на нужный адрес
+                      });
+                    </script><button id="myButton" class="btn">Гайды</button>
+<script>
+  document.getElementById("myButton").addEventListener("click", function() {
+    window.location.href = "https://example.com"; // Замените URL на нужный адрес
+  });
+</script><button id="myButton" class="btn">Контакты</button>
+<script>
+  document.getElementById("myButton").addEventListener("click", function() {
+    window.location.href = "https://example.com"; // Замените URL на нужный адрес
+  });
+</script><button id="myButton" class="btn">Добавить гайд</button>
+<script>
+  document.getElementById("myButton").addEventListener("click", function() {
+    window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/add_guide"; // Замените URL на нужный адрес
+  });
+</script>
             </ul>
         </div>
     </nav>
