--- a/templates/home.html
+++ b/templates/home.html
@@ -18,17 +18,17 @@
                     <button id="myButton" class="btn">Главная страница</button>
                     <script>
                       document.getElementById("myButton").addEventListener("click", function() {
-                        window.location.href = "https://example.com"; // Замените URL на нужный адрес
+                        window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/"; // Замените URL на нужный адрес
                       });
                     </script><button id="myButton" class="btn">Гайды</button>
 <script>
   document.getElementById("myButton").addEventListener("click", function() {
-    window.location.href = "https://example.com"; // Замените URL на нужный адрес
+    window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/guides"; // Замените URL на нужный адрес
   });
 </script><button id="myButton" class="btn">Контакты</button>
 <script>
   document.getElementById("myButton").addEventListener("click", function() {
-    window.location.href = "https://example.com"; // Замените URL на нужный адрес
+    window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/contact"; // Замените URL на нужный адрес
   });
 </script><button id="myButton" class="btn">Добавить гайд</button>
 <script>
