--- a/templates/home.html
+++ b/templates/home.html
@@ -15,24 +15,30 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item active">
-                    <button id="myButton" class="btn">Главная страница</button>
-                    <script>
-                      document.getElementById("myButton").addEventListener("click", function() {
-                        window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/"; // Замените URL на нужный адрес
-                      });
-                    </script><button id="myButton" class="btn">Гайды</button>
+                    <button id="homeButton" class="btn">Главная страница</button>
 <script>
-  document.getElementById("myButton").addEventListener("click", function() {
+  document.getElementById("homeButton").addEventListener("click", function() {
+    window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/"; // Замените URL на нужный адрес
+  });
+</script>
+
+<button id="guidesButton" class="btn">Гайды</button>
+<script>
+  document.getElementById("guidesButton").addEventListener("click", function() {
     window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/guides"; // Замените URL на нужный адрес
   });
-</script><button id="myButton" class="btn">Контакты</button>
+</script>
+
+<button id="contactButton" class="btn">Контакты</button>
 <script>
-  document.getElementById("myButton").addEventListener("click", function() {
+  document.getElementById("contactButton").addEventListener("click", function() {
     window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/contact"; // Замените URL на нужный адрес
   });
-</script><button id="myButton" class="btn">Добавить гайд</button>
+</script>
+
+<button id="addGuideButton" class="btn">Добавить гайд</button>
 <script>
-  document.getElementById("myButton").addEventListener("click", function() {
+  document.getElementById("addGuideButton").addEventListener("click", function() {
     window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/add_guide"; // Замените URL на нужный адрес
   });
 </script>
