--- a/templates/home.html
+++ b/templates/home.html
@@ -42,6 +42,13 @@
     window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/add_guide"; // Замените URL на нужный адрес
   });
 </script>
+
+<button id="contactButton" class="btn">Контакты</button>
+<script>
+  document.getElementById("contactButton").addEventListener("click", function() {
+    window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/contact"; // Замените URL на нужный адрес
+  });
+</script>
             </ul>
         </div>
     </nav>
