--- a/templates/authorization.html
+++ b/templates/authorization.html
@@ -1,39 +1,44 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Авторизация</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
- <form id="loginForm" class="form-horizontal">
-    <div class="form-group">
-      <label for="username" class="col-sm-2 control-label">Логин:</label>
-      <div class="col-sm-10">
-        <input type="text" class="form-control" id="username" name="username" required>
+  <title>Авторизация</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Авторизация</h1>
+    <form id="loginForm" class="form-horizontal">
+      <div class="form-group">
+        <label for="username" class="col-sm-2 control-label">Логин:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="username" name="username" required>
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <label for="password" class="col-sm-2 control-label">Пароль:</label>
-      <div class="col-sm-10">
-        <input type="password" class="form-control" id="password" name="password" required>
+      <div class="form-group">
+        <label for="password" class="col-sm-2 control-label">Пароль:</label>
+        <div class="col-sm-10">
+          <input type="password" class="form-control" id="password" name="password" required>
+        </div>
       </div>
-    </div>
-    <div class="form-group">
-      <div class="col-sm-offset-2 col-sm-10">
-        <button type="submit" class="btn btn-primary">Войти</button>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-primary">Войти</button>
+        </div>
       </div>
-    </div>
-  </form>
-  
+    </form>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   <script>
     document.getElementById("loginForm").addEventListener("submit", function(event) {
       event.preventDefault(); // Предотвращает отправку формы по умолчанию
-  
+
       var username = document.getElementById("username").value;
       var password = document.getElementById("password").value;
-  
+
       // Здесь вы можете добавить логику для проверки учетных данных и выполнения действий после успешной авторизации
-  
+
       // Пример:
       if (username === "admin" && password === "password") {
         alert("Авторизация успешна!");
@@ -43,3 +48,5 @@
       }
     });
   </script>
+</body>
+</html>
