--- a/templates/home.html
+++ b/templates/home.html
@@ -46,7 +46,7 @@
 <button id="contactButton" class="btn">Авторизация</button>
 <script>
   document.getElementById("contactButton").addEventListener("click", function() {
-    window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/contact"; // Замените URL на нужный адрес
+    window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/login"; // Замените URL на нужный адрес
   });
 </script>
             </ul>
