--- a/templates/login.html
+++ b/templates/login.html
@@ -40,7 +40,7 @@
       // Здесь вы можете добавить логику для проверки учетных данных и выполнения действий после успешной авторизации
 
       // Пример:
-      if (username === "admin" && password === "password") {
+      if (username === "Artem" && password === "27092008") {
         alert("Авторизация успешна!");
         // Вы можете выполнить дополнительные действия после успешной авторизации, например, перенаправление на главную страницу
       } else {
