--- a/templates/home.html
+++ b/templates/home.html
@@ -43,9 +43,9 @@
   });
 </script>
 
-<button id="contactButton" class="btn">Авторизация</button>
+<button id="addGuideButton" class="btn">Авторизация</button>
 <script>
-  document.getElementById("contactButton").addEventListener("click", function() {
+  document.getElementById("loginButton").addEventListener("click", function() {
     window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/login"; // Замените URL на нужный адрес
   });
 </script>
