--- a/templates/guides.html
+++ b/templates/guides.html
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Игровые гайды</title>
+  <title>Guides</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
   <div class="container">
-    <h1>Игровые гайды</h1>
-    <div class="accordion" id="guideAccordion">
-      <div class="card">
-        <div class="card-header" id="guideOneHeader">
-          <h2 class="mb-0">
-            <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#guideOne" aria-expanded="true" aria-controls="guideOne">
-              Гайд номер один : Как играть в Бравл Старс
-            </button>
-          </h2>
-        </div>
-        <div id="guideOne" class="collapse show" aria-labelledby="guideOneHeader" data-parent="#guideAccordion">
-          <div class="card-body">
-            <h3>Полное описание</h3>
-            <p>Пока что гайда нет,но скора он будет выложен.Так что ждите совсем скоро</p>
-          </div>
+    <h1>Guides</h1>
+    <form id="guideForm" class="form-horizontal" method="POST" action="{{ url_for('guides') }}">
+      <div class="form-group">
+        <label for="guide_name" class="col-sm-2 control-label">Guide Name:</label>
+        <div class="col-sm-10">
+          <input type="text" class="form-control" id="guide_name" name="guide_name" required>
         </div>
       </div>
-      <!-- Add more guides here -->
-    </div>
+      <div class="form-group">
+        <label for="guide_content" class="col-sm-2 control-label">Guide Content:</label>
+        <div class="col-sm-10">
+          <textarea class="form-control" id="guide_content" name="guide_content" rows="5" required></textarea>
+        </div>
+      </div>
+      <div class="form-group">
+        <div class="col-sm-offset-2 col-sm-10">
+          <button type="submit" class="btn btn-primary">Save Guide</button>
+        </div>
+      </div>
+    </form>
+
+    <hr>
+
+    <h2>Saved Guides</h2>
+    <ul class="list-group">
+      {% for guide in guides %}
+      <li class="list-group-item">
+        <h5 class="mb-1">{{ guide['name'] }}</h5>
+        <p class="mb-1">{{ guide['content'] }}</p>
+      </li>
+      {% endfor %}
+    </ul>
   </div>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 </html>
