--- a/templates/guides.html
+++ b/templates/guides.html
@@ -1,17 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Гайды</title>
+  <title>Guides</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <style>
+    .highlight {
+      background-color: yellow;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
-    <h1>Гайды</h1>
+    <h1>Guides</h1>
     <ul class="list-group">
       {% for guide in guides %}
-      <li class="list-group-item">
+      <li class="list-group-item" onclick="toggleHighlight(this)">
         <h5 class="mb-1">{{ guide['name'] }}</h5>
-        <p class="mb-1">{{ guide['content'] }}</p>
+        <p class="mb-1" style="display: none;">{{ guide['content'] }}</p>
       </li>
       {% endfor %}
     </ul>
@@ -19,5 +24,11 @@
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+    function toggleHighlight(element) {
+      $(element).toggleClass('highlight');
+      $(element).find('p').toggle();
+    }
+  </script>
 </body>
 </html>
