--- a/templates/guides.html
+++ b/templates/guides.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
     .highlight {
-      background-color: yellow;
+      background-color: rgb(44, 44, 43);
     }
   </style>
 </head>
