--- a/templates/guides.html
+++ b/templates/guides.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Guides</title>
+  <title>Гайды</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <style>
     .highlight {
-      background-color: rgb(44, 44, 43);
+      background-color: rgb(165, 165, 165);
     }
   </style>
 </head>
 <body>
   <div class="container">
-    <h1>Guides</h1>
+    <h1>Гайды</h1>
     <ul class="list-group">
       {% for guide in guides %}
       <li class="list-group-item" onclick="toggleHighlight(this)">
