--- a/templates/home.html
+++ b/templates/home.html
@@ -43,7 +43,7 @@
   });
 </script>
 
-<button id="addGuideButton" class="btn">Авторизация</button>
+<button id="loginButton" class="btn">Авторизация</button>
 <script>
   document.getElementById("loginButton").addEventListener("click", function() {
     window.location.href = "https://ubiquitous-bassoon-x5r5qrpg6rgvhp9j7-5000.app.github.dev/login"; // Замените URL на нужный адрес
