--- a/templates/guides.html
+++ b/templates/guides.html
@@ -23,7 +23,7 @@
       </li>
       {% endfor %}
     </ul>
-    <button class="btn btn-primary" onclick="goToMainPage()">Go to Main Page</button>
+    <button type="button" class="btn btn-secondary" onclick="goToMainPage()">На главную</button>
   </div>
 
   <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
