--- a/templates/contact.html
+++ b/templates/contact.html
@@ -15,6 +15,15 @@
       <a href="https://www.twitter.com">Twitter</a>
       <a href="https://www.instagram.com">Instagram</a>
     </div>
+    <div class="text-center mt-4">
+      <button type="button" class="btn btn-secondary" onclick="goToMainPage()">На главную</button>
+    </div>
   </div>
+
+  <script>
+    function goToMainPage() {
+      window.location.href = '/';
+    }
+  </script>
 </body>
 </html>
