--- a/templates/add_guide.html
+++ b/templates/add_guide.html
@@ -1,36 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Добавление гайда</title>
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Добавление гайда</title>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-<div class="container">
+  <div class="container">
     <h1>Добавление гайда</h1>
     <form>
-        <div class="form-group">
-            <label for="guideTitle">Название гайда:</label>
-            <input type="text" class="form-control" id="guideTitle">
-        </div>
-        <div class="form-group">
-            <label for="gameTitle">Название игры:</label>
-            <input type="text" class="form-control" id="gameTitle">
-        </div>
-        <div class="form-group">
-            <label for="guideAuthor">Автор гайда:</label>
-            <input type="text" class="form-control" id="guideAuthor">
-        </div>
-        <div class="form-group">
-            <label for="guideDescription">Описание:</label>
-            <textarea class="form-control" id="guideDescription"></textarea>
-        </div>
-        <button type="submit" class="btn btn-primary">Опубликовать</button>
+      <div class="form-group">
+        <label for="guideTitle">Название гайда:</label>
+        <input type="text" class="form-control" id="guideTitle">
+      </div>
+      <div class="form-group">
+        <label for="gameTitle">Название игры:</label>
+        <input type="text" class="form-control" id="gameTitle">
+      </div>
+      <div class="form-group">
+        <label for="guideAuthor">Автор гайда:</label>
+        <input type="text" class="form-control" id="guideAuthor">
+      </div>
+      <div class="form-group">
+        <label for="guideDescription">Описание:</label>
+        <textarea class="form-control" id="guideDescription"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary">Опубликовать</button>
+      <div class="text-center mt-4">
+        <button type="button" class="btn btn-secondary" onclick="goToMainPage()">На главную</button>
+      </div>
     </form>
-</div>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  </div>
+
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script>
+    function goToMainPage() {
+      window.location.href = '/';
+    }
+  </script>
 </body>
 </html>
