--- a/templates/guides.html
+++ b/templates/guides.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Guides</h1>
+    <h1>Гайды</h1>
     <ul class="list-group">
       {% for guide in guides %}
       <li class="list-group-item" onclick="toggleHighlight(this)">
