--- a/templates/guides.html
+++ b/templates/guides.html
@@ -19,7 +19,7 @@
           <h5 class="mb-1">{{ guide['guide_name'] }}</h5>
           <h5 class="mb-1">{{ guide['author_name'] }}</h5>
           <h5 class="mb-1">{{ guide['game_name'] }}</h5>
-          <button class="btn btn-sm btn-primary" onclick="toggleDescription(this)">Toggle Description</button>
+          <button class="btn btn-sm btn-primary" onclick="toggleDescription(this)">Полное описание</button>
         </div>
         <p class="mb-1" style="display: none;">{{ guide['description'] }}</p>
       </li>
