--- a/templates/add_guide.html
+++ b/templates/add_guide.html
@@ -9,22 +9,22 @@
 <body>
   <div class="container">
     <h1>Добавление гайда</h1>
-    <form>
+    <form id="guideForm">
       <div class="form-group">
         <label for="guideTitle">Название гайда:</label>
-        <input type="text" class="form-control" id="guideTitle">
+        <input type="text" class="form-control" id="guideTitle" required>
       </div>
       <div class="form-group">
         <label for="gameTitle">Название игры:</label>
-        <input type="text" class="form-control" id="gameTitle">
+        <input type="text" class="form-control" id="gameTitle" required>
       </div>
       <div class="form-group">
         <label for="guideAuthor">Автор гайда:</label>
-        <input type="text" class="form-control" id="guideAuthor">
+        <input type="text" class="form-control" id="guideAuthor" required>
       </div>
       <div class="form-group">
         <label for="guideDescription">Описание:</label>
-        <textarea class="form-control" id="guideDescription"></textarea>
+        <textarea class="form-control" id="guideDescription" required></textarea>
       </div>
       <button type="submit" class="btn btn-primary">Опубликовать</button>
       <div class="text-center mt-4">
@@ -40,6 +40,36 @@
     function goToMainPage() {
       window.location.href = '/';
     }
+
+    $('#guideForm').submit(function(event) {
+      event.preventDefault();
+
+      var guideTitle = $('#guideTitle').val();
+      var gameTitle = $('#gameTitle').val();
+      var guideAuthor = $('#guideAuthor').val();
+      var guideDescription = $('#guideDescription').val();
+
+      var guideData = {
+        guide_name: guideTitle,
+        game_name: gameTitle,
+        author_name: guideAuthor,
+        description: guideDescription
+      };
+
+      $.ajax({
+        url: '/save_guide',
+        method: 'POST',
+        data: JSON.stringify(guideData),
+        contentType: 'application/json',
+        success: function(response) {
+          alert('Гайд успешно сохранен в папку Save_guides');
+        },
+        error: function(error) {
+          console.log(error);
+          alert('При сохранении гайда произошла ошибка');
+        }
+      });
+    });
   </script>
 </body>
 </html>
